@@ -5,6 +5,9 @@ New in spot 2.10.1.dev  (not yet released)
   - twa_graph::purge_dead_states() now also removes edges labeled by
     bddfalse.
 
+  - only use sched_getcpu() and pthread_setaffinity_np() when they are
+    available.
+
 New in spot 2.10.1  (2021-11-19)
 
   Build:
